Bug 249108 - Borders which are not there are displaying in the particular docx file
Summary: Borders which are not there are displaying in the particular docx file
Status: VERIFIED FIXED
Alias: None
Product: calligrawords
Classification: Applications
Component: docx (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Matus Uzak
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-08-26 13:08 UTC by swathi
Modified: 2012-02-03 13:59 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot of the document in MS Word 2007 (135.95 KB, image/x-png)
2010-08-26 13:09 UTC, swathi
Details
Screenshot of the document in Kword(In revision 1167272) (231.00 KB, image/x-png)
2010-08-27 14:32 UTC, swathi
Details
Screenshot in Latest Calligra Words (188.26 KB, image/png)
2011-09-24 09:39 UTC, swathi
Details
Screenshot in Latest Calligra Words (274.38 KB, image/png)
2011-12-23 09:32 UTC, swathi
Details
Test file displayed by Words - "Show Table Borders" disabled. (425.26 KB, image/png)
2011-12-23 11:02 UTC, Matus Uzak
Details

Note You need to log in before you can comment on or make changes to this bug.
Description swathi 2010-08-26 13:08:39 UTC
Version:           svn (Rev: 1167272) (using KDE 4.4.3) 
OS:                Kubuntu 10.04

Docx to be opened in Kword is there in the below link.
http://bankonacareer.com/images/uploaded/WedPMCETE_523C.docx

In this some text content is there with out any borders.
When i opened this docx in Kword,text content is displaying with in some unexpected borders which are not really there in the original docx.

Expected outcome:
Kword should be able to display the content without any borders as like in the original document.
Comment 1 swathi 2010-08-26 13:09:35 UTC
Created attachment 50978 [details]
Screenshot of the document in MS Word 2007
Comment 2 swathi 2010-08-26 13:11:23 UTC
Converted the test data to .odt file using koconverter.
OOWriter loads the document as like Kword(Here also unexpected borders are displaying).

Guessing it to be a filter problem.
Comment 3 swathi 2010-08-27 14:32:49 UTC
Created attachment 51017 [details]
Screenshot of the document in Kword(In revision  1167272)
Comment 4 swathi 2011-09-24 09:39:35 UTC
Created attachment 63908 [details]
Screenshot in Latest Calligra Words

Screenshot of the document in Latest Revision(Git commit  beebf480a6b044ad95e998e94a1693bc5c73703f)
Comment 5 Matus Uzak 2011-12-10 22:31:17 UTC
Git commit 725883bc520df4b227e1bfec058981bab3ad2eed by Matus Uzak.
Committed on 10/12/2011 at 23:17.
Pushed by uzak into branch 'master'.

docx: table styles - borders inheritance

* The aim was to dislay tables with NO borders correctly.  The only regressions
  I noticed on tables with borders are caused by incorrect color (#ffffff), so
  those are not visible.  Also nested tables require more work to figure out
  correct borders.  On my TODO list.

* Renamed a number of variables in order to improve the readability.

BUG:249108

M  +85   -17   filters/libmsooxml/MsooXmlDrawingTableStyle.cpp
M  +1    -1    filters/libmsooxml/MsooXmlDrawingTableStyle.h
M  +110  -40   filters/libmsooxml/MsooXmlTableStyle.cpp
M  +18   -5    filters/libmsooxml/MsooXmlTableStyle.h
M  +204  -81   filters/words/docx/DocxXmlDocumentReader.cpp
M  +3    -2    filters/words/docx/DocxXmlDocumentReader.h
M  +42   -42   filters/words/docx/DocxXmlStylesReader.cpp

http://commits.kde.org/calligra/725883bc520df4b227e1bfec058981bab3ad2eed
Comment 6 swathi 2011-12-23 09:32:33 UTC
Tested in efd72bd27341ffe9a49d4e30352f9468bb49d99d.
Issue is still there so reopening the bug.
Comment 7 swathi 2011-12-23 09:32:59 UTC
Created attachment 67050 [details]
Screenshot in Latest Calligra Words
Comment 8 Matus Uzak 2011-12-23 11:01:39 UTC
Please make sure that "Show Table Borders" is disabled in the View menu.  It might sound like I want you to disable display of table borders in general, but it only displays table borders in case the table has no borders defined.
Comment 9 Matus Uzak 2011-12-23 11:02:50 UTC
Created attachment 67051 [details]
Test file displayed by Words - "Show Table Borders" disabled.
Comment 10 Abhishek Mittal 2012-02-03 13:59:49 UTC
Verified in Rev : 3bd850d44353717839b540b587af6704253c6d30
On setting Show Table Border off , the borders are not displayed.
Agreed with Uzak that this option does not diable display of table border in general.