docx: table styles - borders inheritance

* The aim was to dislay tables with NO borders correctly.  The only regressions
  I noticed on tables with borders are caused by incorrect color (#ffffff), so
  those are not visible.  Also nested tables require more work to figure out
  correct borders.  On my TODO list.

* Renamed a number of variables in order to improve the readability.

BUG:249108